total hours done

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .wrapper {
-  background: url("background-pic.jpg") no-repeat center center;
+  background: url("background-pic.png") no-repeat center center;
   background-size: cover;
   height: 100vh;
   width: 100vw;
